--- a/WebLegemClient/src/app/gestion-documental/documento/informacion-documento.tmpl.html
+++ b/WebLegemClient/src/app/gestion-documental/documento/informacion-documento.tmpl.html
@@ -6,45 +6,41 @@
         </label>
         <hr class="divisor_gestion_documental" />
         <form id="informacion_documento">
-            <div style="background:blue; width:40px; height:30px; flex-grow:2;"></div>
-            <div style="background:magenta; width:40px; height:30px; flex-grow:2;"></div>
-            <!--
-
-            <div>
+            <div class="a_1">
                 <label class="texto_labels" for="tipo-documento">Tipo de Documento:</label>
                 <div>
                     <select id="tipo-documento" class="select" ng-options="tipo as tipo.nombre for tipo in vm.tiposDocumento | orderBy: 'nombre'" ng-model="vm.documento.tipoDocumento">
                         <option ng-repeat="tipo in vm.tiposDocumento">{{ tipo.nombre }}</option>
                     </select>
-                    <span class="span_select_a ico-angle-down"></span>
+                    <span class="span_select zzz ico-angle-down"></span>
                 </div>
             </div>
-            <div>
+            <div class="zzz">
                 <label class="texto_labels" for="entidad" ng-model="vm.documento.entidad">Entidad:</label>
                 <div>
-                    <select id="entidad" class="select" ng-options="entidad as entidad.nombre for entidad in vm.entidades | orderBy: 'nombre'" ng-model="vm.documento.entidad">
+                    <select id="entidad" class="select zzz" ng-options="entidad as entidad.nombre for entidad in vm.entidades | orderBy: 'nombre'" ng-model="vm.documento.entidad">
                         <option ng-repeat="entidad in vm.entidades">{{ entidad.nombre }}</option>
                     </select>
-                    <span class="span_select_a ico-angle-down"></span>
+                    <span class="span_select ico-angle-down"></span>
                 </div>
             </div>
-            <div>
+            <div class="b_1">
                 <label class="texto_labels" for="numero">Numero:</label>
                 <input class="a_input " type="text" id="numero" ng-model="vm.documento.numero" />
             </div>
-            <div>
+            <div class="b_1">
                 <label class="texto_labels" for="año">Año:</label>
                 <input class="a_input" id="año" type="text" maxlength="4" ng-model="vm.documento.anioPublicacion" />
-            </div>                
-            <div>
-                <button class="btn_con_ico" ng-click="vm.aceptar()">
-                    <span class="ico-chevron-left tamano_botones_1"></span>Atras
-                </button>
-                <button class="btn_con_ico inverso" ui-sref="gestion-documental.crear-documento.asunto">
-                    Siguiente<span class="ico-chevron-right tamano_botones_1 derecha"></span>
-                </button>
             </div>
-                -->
+
         </form>
+        <div>
+            <button class="btn_con_ico" ng-click="vm.aceptar()">
+                <span class="ico-chevron-left tamano_botones_1"></span>Atras
+            </button>
+            <button class="btn_con_ico inverso" ui-sref="gestion-documental.crear-documento.asunto">
+                Siguiente<span class="ico-chevron-right tamano_botones_1 derecha"></span>
+            </button>
+        </div>
     </div>
 </div>
