disposicion boton next and back

--- a/WebLegemClient/src/app/gestion-documental/documento/informacion-documento.tmpl.html
+++ b/WebLegemClient/src/app/gestion-documental/documento/informacion-documento.tmpl.html
@@ -34,7 +34,7 @@
             </div>
 
         </form>
-        <div>
+        <div class="contenedor_back_next">
             <button class="btn_con_ico" ng-click="vm.aceptar()">
                 <span class="ico-chevron-left tamano_botones_1"></span>Atras
             </button>
