--- a/WebLegemClient/src/css/plantillas/informacion_documento.css
+++ b/WebLegemClient/src/css/plantillas/informacion_documento.css
@@ -8,7 +8,8 @@
     flex-direction: row;
     
     justify-content:space-between;
-    margin:10px 0;
+    margin:50px 0;
+    margin-bottom:60px;
 }
 
 .a_1{
@@ -29,4 +30,11 @@
     width:150px;
 }
 
+.contenedor_back_next {
+    display: flex;
+    -ms-flex-direction: row;
+    -webkit-flex-direction: row;
+    flex-direction: row;
+    justify-content: space-between;
+}
 
