--- a/WebLegemClient/src/app/gestion-documental/documento/asunto.tmpl.html
+++ b/WebLegemClient/src/app/gestion-documental/documento/asunto.tmpl.html
@@ -5,8 +5,9 @@
             Asunto
         </label>
         <hr class="divisor_gestion_documental" />
-        <form>
-            <textarea class="text_area" rows="4" cols="50" ng-model="vm.documento.asunto"></textarea>
+        <form>            
+            <ng-quill-editor ng-model="vm.documento.asunto" toolbar="true" link-tooltip="true" image-tooltip="true" toolbar-entries="font size bold list bullet italic underline strike align color background link image" editor-required="true" required="" error-class="input-error">
+            </ng-quill-editor>
 
             <!--<button class="a_boton a_block" type="button" ui-sref="gestion-documental.crear-documento.pergunta-anotacion">Siguiente</button>-->
 
