--- a/WebLegemClient/src/app/administracion/tipo-documento/tipo-documento.tmpl.html
+++ b/WebLegemClient/src/app/administracion/tipo-documento/tipo-documento.tmpl.html
@@ -9,7 +9,9 @@
                             ng-click="vm.listadoTipoDocumento(tipo)" ng-disabled="vm.editando" />
                     <label class="styled" for="{{tipo.id}}">{{ tipo.nombre }}</label>
                 </li>
+                
             </ul>
+            <img src="recursos/clipo.gif" />
         </div>
 
         <div class="hijo_right">
