--- a/WebLegemClient/src/css/elementos/barra_navegacion.css
+++ b/WebLegemClient/src/css/elementos/barra_navegacion.css
@@ -8,10 +8,9 @@
 .bar_nav{
     height:30px;
     background:#37404A;
-    /*
-    -webkit-box-shadow: 0 1px 2px 0 rgba(36, 38, 36, 0.93);
-    -moz-box-shadow: 0 1px 2px 0 rgba(36, 38, 36, 0.93);
-    box-shadow: 0 1px 2px 0 rgba(36, 38, 36, 0.93);*/
+    -webkit-box-shadow: 0 -1px 1px rgba(36, 38, 36, 0.93);
+    -moz-box-shadow: 0 -1px 1px rgba(36, 38, 36, 0.93);
+    box-shadow: 0 -1px 1px rgba(36, 38, 36, 0.93);
 }
 
 .bar_nav > li {
