--- a/WebLegemClient/src/app/gestion-documental/documento/subir-archivo.tmpl.html
+++ b/WebLegemClient/src/app/gestion-documental/documento/subir-archivo.tmpl.html
@@ -26,7 +26,7 @@
             <br />
         </form>
 
-        <div>
+        <div style="display: flex; justify-content: flex-end;">
             <button class="btn_con_ico inverso" ui-sref="gestion-documental.crear-documento.informacion-documento">
                 Siguiente<span class="ico-chevron-right tamano_botones_1 derecha"></span>
             </button>
