--- a/WebLegemClient/src/css/plantillas/gestion_documental.css
+++ b/WebLegemClient/src/css/plantillas/gestion_documental.css
@@ -21,6 +21,7 @@
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
+    overflow-y: scroll;
 }
 
 .tontera ng-quill-editor{
